--- a/puller/Rakefile
+++ b/puller/Rakefile
@@ -3,9 +3,17 @@ require 'rspec/core/rake_task'
 require 'rubocop/rake_task'
 
 RSpec::Core::RakeTask.new(:spec)
-RuboCop::RakeTask.new(:rubocop)
+RuboCop::RakeTask.new(:rubocop) do |task|
+  task.options = ['-D']
+end
 
 task default: :spec
+
+namespace :test do
+  RSpec::Core::RakeTask.new(:fast) do |task|
+    task.rspec_opts = '--tag ~slow'
+  end
+end
 
 task test: :spec # Run all tests for this gem.
 
