--- a/puller/Rakefile
+++ b/puller/Rakefile
@@ -11,7 +11,7 @@ task default: :spec
 
 namespace :test do
   RSpec::Core::RakeTask.new(:fast) do |task|
-    task.rspec_opts = '--tag ~slow'
+    task.rspec_opts = '--tag ~speed:slow'
   end
 end
 
