fixed some style errors

--- a/sms_sender/Rakefile
+++ b/sms_sender/Rakefile
@@ -1,4 +1,3 @@
-
 require 'bundler/gem_tasks'
 require 'rspec/core/rake_task'
 require 'rubocop/rake_task'
@@ -8,17 +7,13 @@ require 'sms_sender'
 # Default to validation
 task default: :validate
 
+# Testing framework
+RSpec::Core::RakeTask.new(:spec)
+
 # Linter
 RuboCop::RakeTask.new(:rubocop) do |task|
   task.options = ['-D']
 end
-
-namespace :test do
-  RSpec::Core::RakeTask.new(:spec)  do |task|
-  	
-  end
-end
-
 
 namespace :test do
   ##
@@ -33,3 +28,9 @@ task test: :spec # Run all tests for this gem.
 # Validation runs tests and the linter.
 task validate: :test
 task validate: :rubocop
+
+# Rdoc produces documentation for this gem.
+RDoc::Task.new :rdoc do |task|
+  task.main = 'README.md'
+  task.rdoc_files.include('README.md', 'lib/**/*.rb')
+end
