Prepared puller for acceptance testing.
* Fully documented each puller module with rspec.
* Added the rspec rake task to the puller gem.
* Updated the puller version for the patch in the previous commit.
* Renamed some constants and parameters in `Puller` and
  `Puller::Processor` to be more correct/understandable.
* Added a 'by name' option for the processor to make the output
  human readable.
    * Added `Puller::Processor::data_by_name()` to retrive data
      by name.
    * Added `Puller::Processor::ByName` for use in the Puller pipeline.
* Added test cases for the new functionality.
* Added the `test:acceptance` rake task for puller.
* Updated the puller README to describe the acceptance test.
* Corrected spelling of `marshaler`.
* Made stylistic fixes to the Rakefile and processor.

--- a/puller/Rakefile
+++ b/puller/Rakefile
@@ -1,6 +1,7 @@
 require 'bundler/gem_tasks'
 require 'rspec/core/rake_task'
 require 'rubocop/rake_task'
+require 'rdoc/task'
 
 RSpec::Core::RakeTask.new(:spec)
 RuboCop::RakeTask.new(:rubocop) do |task|
@@ -13,9 +14,39 @@ namespace :test do
   RSpec::Core::RakeTask.new(:fast) do |task|
     task.rspec_opts = '--tag ~speed:slow'
   end
+
+  task :acceptance do
+    require 'puller'
+
+    source = { hostname: 'ftp2.bom.gov.au',
+               filename: '/anon/gen/fwo/IDA00003.dat',
+               user: 'ftp',
+               passwd: '' }
+
+    ## Custom printer for acceptance tests.
+    module CustomPrinter
+      def self::dump(data)
+        data.each_pair do |name, maxes|
+          puts "Region: #{name}"
+          puts maxes
+        end
+      end
+    end
+
+    pipeline = { getter: Puller::Getter,
+                 processor: Puller::Processor::ByName,
+                 marshaler: CustomPrinter }
+
+    Puller.pull_from(source, pipeline)
+  end
 end
 
 task test: :spec # Run all tests for this gem.
 
 task validate: :test
 task validate: :rubocop
+
+RDoc::Task.new :rdoc do |task|
+  task.main = 'README.md'
+  task.rdoc_files.include('README.md', 'lib/**/*.rb')
+end
