Updated Puller::Processor to provide dates.
* Updated Puller::Processor's methods to return a hash
  mapping id to another hash, which maps date to maximum temperature.
* Updated `puller_spec.rb` to match the new behaviour.
* Updated the acceptance test for Puller to display dates
  to make verificaton easier.

An example of the new processed data format is:
```Ruby
{ '123456' => {
  <Date 13-10-2015> => 10,
  <Date 14-10-2015> => 15,
  <Date 15-10-2015> => 13,
  <Date 16-10-2015> => 18,
  <Date 17-10-2015> => 12,
  <Date 18-10-2015> => 13,
  <Date 19-10-2015> => 14 } }
```

--- a/puller/Rakefile
+++ b/puller/Rakefile
@@ -4,6 +4,8 @@ require 'rspec/core/rake_task'
 require 'rubocop/rake_task'
 require 'rdoc/task'
 
+RAILS_HOME = '../heatwave' unless defined?(RAILS_HOME)
+
 # Default to validation
 task default: :validate
 
@@ -38,7 +40,9 @@ namespace :test do
       def self::dump(data)
         data.each_pair do |name, maxes|
           puts "Region: #{name}"
-          puts maxes
+          maxes.each_pair do |date, max|
+            puts "#{date.strftime('%a %d %b')}: #{max}C"
+          end
         end
       end
     end
@@ -67,5 +71,27 @@ end
 ActiveRecordMigrations.configure do |config|
   # Copy the migrations from the rails app.
   config.migrations_paths = ['../heatwave/db/migrate']
+  # TODO: Not very DRY, but I don't know how to fix.
+  config.database_configuration = {
+    'development' => {
+      'adapter' => 'sqlite3',
+      'pool' => 5,
+      'timeout' => 5000,
+      'database' => "#{RAILS_HOME}/db/development.sqlite3"
+    },
+    'test' => {
+      'adapter' => 'sqlite3',
+      'pool' => 5,
+      'timeout' => 5000,
+      'database' => 'db/test.sqlite3'
+    },
+    'production' => {
+      'adapter' => 'sqlite3',
+      'pool' => 5,
+      'timeout' => 5000,
+      'database' => "#{RAILS_HOME}/db/production.sqlite3"
+    }
+  }
 end
+
 ActiveRecordMigrations.load_tasks
