Tested `Puller::ModelMarhsaler` with real models.
* Refactored ModelMarshaler to make proper use of
  the ActiveRecord models.
* Refactored the specs for ModelMarshaler to reflect the above
  change, as well as improve test speed.
* Added tests for ModelMarshaler which use the actual models.
* Added an association with Location to the Weather model.
* Added a `find_and_update_or_create_by` method to
  the Weather model.
* Removed the id size limit in the Weather migration.
* Moved the RAILS_HOME constant from the Puller Rakefile
  to the Puller library source.
* Added the db:test:reset Rake task for Puller.
* Moved database config from the Rakefile to the library source
  for Puller.
* Ran the migrations for the Weather and Location tables.

--- a/puller/Rakefile
+++ b/puller/Rakefile
@@ -3,8 +3,7 @@ require 'bundler/gem_tasks'
 require 'rspec/core/rake_task'
 require 'rubocop/rake_task'
 require 'rdoc/task'
-
-RAILS_HOME = '../heatwave' unless defined?(RAILS_HOME)
+require 'puller'
 
 # Default to validation
 task default: :validate
@@ -15,6 +14,17 @@ RSpec::Core::RakeTask.new(:spec)
 # Linter
 RuboCop::RakeTask.new(:rubocop) do |task|
   task.options = ['-D']
+end
+
+namespace :db do
+  namespace :test do
+    task :reset do
+      ActiveRecord::Base.establish_connection(:test)
+      Rake::Task['db:drop'].invoke
+      Rake::Task['db:create'].invoke
+      Rake::Task['db:migrate'].invoke
+    end
+  end
 end
 
 namespace :test do
@@ -55,6 +65,7 @@ namespace :test do
   end
 end
 
+task spec: :'db:test:reset' # Always reset the test db before specs
 task test: :spec # Run all tests for this gem.
 
 # Validation runs tests and the linter.
@@ -72,26 +83,7 @@ ActiveRecordMigrations.configure do |config|
   # Copy the migrations from the rails app.
   config.migrations_paths = ['../heatwave/db/migrate']
   # TODO: Not very DRY, but I don't know how to fix.
-  config.database_configuration = {
-    'development' => {
-      'adapter' => 'sqlite3',
-      'pool' => 5,
-      'timeout' => 5000,
-      'database' => "#{RAILS_HOME}/db/development.sqlite3"
-    },
-    'test' => {
-      'adapter' => 'sqlite3',
-      'pool' => 5,
-      'timeout' => 5000,
-      'database' => 'db/test.sqlite3'
-    },
-    'production' => {
-      'adapter' => 'sqlite3',
-      'pool' => 5,
-      'timeout' => 5000,
-      'database' => "#{RAILS_HOME}/db/production.sqlite3"
-    }
-  }
+  config.database_configuration = DATABASE_CONFIG
 end
 
 ActiveRecordMigrations.load_tasks
