Compatibility improvements for Puller::Getter.
* Updated the version number.
* Changed Puller::Getter to use passive ftp instead of active ftp.
  The tests were updated to use passive ftp as well.
* Made all test files end in a newline character.
  We think the tests were failing due to file format differences
  between OSs; this should fix that.
* Factored Puller::Getter tests slightly better through use of constants.
* Made the 'works with real ftp' test for Puller::Getter a pure
  regression test instead of comparing with a different implementation
  which was less portable.
* Made the database used for `rake test:acceptance` configurable
  through the DATABASE_ENV environment variable.

--- a/puller/Rakefile
+++ b/puller/Rakefile
@@ -40,7 +40,7 @@ namespace :test do
   # The acceptance test just produces a human readable version
   # of the current weather data.
   task :acceptance do
-    Puller::Database.initialise('production')
+    Puller::Database.initialise(ENV['DATABASE_ENV'] || 'production')
     Puller::ModelMarshaler.weather_model = Weather
     Puller::ModelMarshaler.location_model = Location
 
