--- a/heatwave/Gemfile
+++ b/heatwave/Gemfile
@@ -23,7 +23,8 @@ gem 'jbuilder', '~> 2.0'
 gem 'sdoc', '~> 0.4.0', group: :doc
 # avoid tzinfo-data not found
 gem 'tzinfo-data'
-
+# use old version coffee script
+gem 'coffee-script-source', '1.8.0'
 # Use ActiveModel has_secure_password
 # gem 'bcrypt', '~> 3.1.7'
 
