--- a/sms_sender/Rakefile
+++ b/sms_sender/Rakefile
@@ -25,6 +25,8 @@ namespace :test do
   # sends a real message over the API to James' phone
   task :acceptance do
     ExampleSender.new.send('0400400269', 'Heatwave acceptance tests')
+    ExampleSender.new.send_many(['0400400269','0400400269'],
+                                'Heatwave acceptance tests - multiple texts')
   end
 end
 
