Implemented and tested the location puller.
Version:

* Advanced to version 0.2.0, signifying a working location puller.

Rakefile:

* Refactored to use `Puller::DEFAULT_SOURCE` instead of a redefining
  the weather data source.
* Fixed formatting in acceptance test output.

Executables:

* TODO add an executable to pull location data.
* Updated the puller executable to use `Puller::DEFAULT_SOURCE`.

Models:

* Updated Location#update_or_create to correctly handle ids and
  to return updated model objects.

Puller code:

* Added `Puller::Location::Getter` to handle data fetching over http.
* Implemented `Puller::Location::Looper` to loop through weather
  data and attempt to pull location data for each weather event's
  location.
* Fixed `Puller::Location::Processor::{HEADER and MARKER}` to match
  the BoM's format.
* Improved error reporting in `Puller::Location::Processor.data_in`.
* Added `Puller::DEFAULT_SOURCE` to store the BoM's weather data
  source so it doesn't need to be duplicated everywhere.
* Added `Puller::Simple` as a default instantiable Puller.

Puller Tests:

* Added MORTLAKE to puller/location/spec_helper.rb.
* Moved `Puller::Database.initialise` lines into deeper scopes
  so that they aren't run unnecessarily.
* Updated model_marshaler_spec.rb to handle the change to the Model.
* Added tests for Puller::Location::Looper.

--- a/puller/Rakefile
+++ b/puller/Rakefile
@@ -44,10 +44,7 @@ namespace :test do
     Puller::ModelMarshaler.weather_model = Weather
     Puller::ModelMarshaler.location_model = Location
 
-    source = { hostname: 'ftp2.bom.gov.au',
-               filename: '/anon/gen/fwo/IDA00003.dat',
-               user: 'ftp',
-               passwd: '' }
+    source = Puller::DEFAULT_SOURCE
 
     pipeline = { getter: Puller::Getter,
                  processor: Puller::Processor,
@@ -61,7 +58,7 @@ namespace :test do
     puts '|------------|------|-----------------------------'
     Weather.all.each do |w|
       puts "| #{w.date.strftime('%a %d %b')} "\
-           "| #{w.high_temp}*C | #{w.location.name}"
+        "| %2d*C | #{w.location.name}" % w.high_temp
     end
     puts
     puts "Total weather records: #{Weather.count}"
