Adapted existing models for Messenger.
* Refactored migrations for rules to use an integer, not null,
  delta and duration.
  * Updated the tests and fixtures in the rails app to handle this
    change.
  * Updated each schema.rb to handle this change.
* Added the first few database-dependent tests for Messenger::Joiner.
* Added #run and #mean_for to the Location model.
* Changed `#find_and_update_or_create_by` to just
  `#update_or_create_by` in:
  * heatwave/.../models/weather.rb
  * Puller::ModelMarshaler
  * puller/.../model_marshaler_spec.rb
* Refactored puller/.../location/model_marshaler_spec.rb to not redefine
  a constant.

--- a/heatwave/test/fixtures/rules.yml
+++ b/heatwave/test/fixtures/rules.yml
@@ -3,7 +3,11 @@
 one:
   name: MyString
   annotation: MyString
+  duration: 1
+  delta: 15
 
 two:
   name: MyString
   annotation: MyString
+  duration: 3
+  delta: 10
