Updated the User table for Messenger::Joiner.
* Added referential integrity checks to Location,
  Message, Weather, and User.
* Removed User.address, User.postcode, and User.birthday.
* Added User.location.
* Changed User.subscribed to User.message_type.
* Added real database tests for Messenger::Joiner.recipients.
* Updated the rails application tests and views to handle the
  database and model changes.

--- a/heatwave/test/fixtures/users.yml
+++ b/heatwave/test/fixtures/users.yml
@@ -6,10 +6,8 @@ one:
   password: MyString
   admin_access: false
   gender: MyString
-  address: MyString
   phone: MyString
   age: 1
   email: MyString
-  suscribed: false
-  birthday: 2015-08-28
-  postcode: 3053
+  message_type: 'email'
+  location_id: 1
