--- a/heatwave/Gemfile
+++ b/heatwave/Gemfile
@@ -27,7 +27,10 @@ gem 'tzinfo-data'
 gem 'coffee-script-source', '1.8.0'
 # Use ActiveModel has_secure_password
 # gem 'bcrypt', '~> 3.1.7'
-
+#  use scheduler
+gem 'rufus-scheduler'
+# use puller
+gem 'puller'
 # Use Unicorn as the app server
 # gem 'unicorn'
 
