Improved rakefiles and .gitignores.
* Made the messenger and puller Rakefile system calls more idiomatic.
* Removed the generalised rake db:migrate:reset and test environment
  migrate from the Rails app Rakefile.
  Replaced them with just a test environment db:migrate:reset.
* Made all gitignore files more robust, including pkg, vendor,
  and .bundle directories and making the db rules more specific.

--- a/puller/.gitignore
+++ b/puller/.gitignore
@@ -1,4 +1,13 @@
-/.bundle/
+# Ignore bundler config.
+/.bundle
+
+# Ignore vendor files
+/vendor
+
+# Ignore the default SQLite database.
+/db/*.sqlite3
+/db/*.sqlite3-journal
+
 /.yardoc
 /_yardoc/
 /coverage/
@@ -7,7 +16,3 @@
 /spec/reports/
 /tmp/
 /html/
-
-/db
-
-**/.*.swp
