--- a/messenger/Rakefile
+++ b/messenger/Rakefile
@@ -19,7 +19,7 @@ end
 namespace :db do
   namespace :test do
     task :reset do
-      system('rake db:reset RAILS_ENV=test')
+      `rake db:migrate:reset RAILS_ENV=test`
     end
     task reset: :'db:test'
   end
