--- a/heatwave/test/fixtures/users.yml
+++ b/heatwave/test/fixtures/users.yml
@@ -1,12 +1,23 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 one:
-  f_name: MyString
-  l_name: MyString
-  encrypted_password: MyString
+  f_name: O
+  l_name: Ne
+  encrypted_password: MyPassword123
   admin_access: false
-  gender: MyString
-  phone: MyString
-  age: 1
-  email: MyString
+  gender: M
+  age: 45
+  email: email@address.com
   message_type: 'email'
   location_id: 1
+
+two:
+  f_name: T
+  l_name: Wo
+  encrypted_password: OtherPword
+  admin_access: true
+  gender: F
+  phone: 0412341234
+  age: 23
+  email: admin@heatwave.com
+  message_type: 'phone'
+  location_id: 2
