--- a/messenger/Gemfile
+++ b/messenger/Gemfile
@@ -2,4 +2,4 @@ source 'https://rubygems.org'
 
 # Specify your gem's dependencies in messenger.gemspec
 gemspec
-gem 'sms_sender', :path '../sms_sender'
+gem 'sms_sender', path: '../sms_sender'
